--- a/hours.yml
+++ b/hours.yml
@@ -14,5 +14,5 @@ columns:
       text: mitä tein
       align: left
 data:
-    - ['12.3.', 1, 'Tein apuvälineen tämän taulukon luomiseen (kalppi/md-table-generator)']
+    - ['12.3.', 1, 'Tein apuvälineen tämän taulukon luomiseen [kalppi/md-table-generator](https://github.com/kalppi/md-table-generator)']
     - ['12.3.', 2, 'Backendin aloittelua']
