--- a/backend/package.json
+++ b/backend/package.json
@@ -6,19 +6,22 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
-    "dotenv": "^5.0.1",
     "express": "^4.16.2",
-    "nodemon": "^1.17.1"
+    "nodemon": "^1.17.1",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.36.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1"
+    "babel-preset-env": "^1.6.1",
+    "dotenv": "^5.0.1"
   },
   "scripts": {
     "lint": "eslint .",
     "test": "NODE_ENV=test jest --verbose",
     "start": "NODE_ENV=production babel-node index",
-    "watch": "NODE_ENV=DEV node_modules/.bin/nodemon --exec babel-node -- ./index.js"
+    "watch": "NODE_ENV=DEV node_modules/.bin/nodemon --exec babel-node -- ./load-env.js"
   },
   "author": "Jarno Luukkonen",
   "license": "ISC",
