--- a/hours.yml
+++ b/hours.yml
@@ -16,3 +16,4 @@ columns:
 data:
     - ['12.3.', 1, 'Tein apuvälineen tämän taulukon luomiseen [kalppi/md-table-generator](https://github.com/kalppi/md-table-generator)']
     - ['12.3.', 2, 'Backendin aloittelua']
+    - ['12.3.', 2, 'Sequelizen opettelua ja herokun tietokantaan yhdistämistä']
