--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "dotenv": "^5.0.1"
+    "dotenv": "^5.0.1",
+    "eslint": "^4.18.2",
+    "jest": "^22.4.2"
   },
   "scripts": {
-    "lint": "eslint .",
+    "lint": "node_modules/.bin/eslint .",
     "test": "NODE_ENV=test jest --verbose",
     "start": "NODE_ENV=production babel-node index",
     "watch": "NODE_ENV=DEV node_modules/.bin/nodemon --exec babel-node -- ./load-env"
