--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,14 @@
     "babel-preset-env": "^1.6.1",
     "dotenv": "^5.0.1",
     "eslint": "^4.18.2",
-    "jest": "^22.4.2"
+    "jest": "^22.4.2",
+    "supertest": "^3.0.0"
   },
   "scripts": {
     "lint": "node_modules/.bin/eslint .",
     "test": "NODE_ENV=test jest --verbose",
     "start": "NODE_ENV=production babel-node index",
-    "watch": "NODE_ENV=DEV node_modules/.bin/nodemon --exec babel-node -- ./load-env"
+    "watch": "NODE_ENV=dev node_modules/.bin/nodemon --exec babel-node -- ./load-env"
   },
   "author": "Jarno Luukkonen",
   "license": "ISC",
