--- a/hours.yml
+++ b/hours.yml
@@ -17,3 +17,4 @@ data:
     - ['12.3.', 1, 'Tein apuvälineen tämän taulukon luomiseen [kalppi/md-table-generator](https://github.com/kalppi/md-table-generator)']
     - ['12.3.', 2, 'Backendin aloittelua']
     - ['12.3.', 2, 'Sequelizen opettelua ja herokun tietokantaan yhdistämistä']
+    - ['12.3.', 2, 'Aivan liian kauan Sequelizen sielunelämän kartoittamiseen ja bugien fixailuun. Testien tekemisen aloittelua.']
