--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "supertest": "^3.0.0"
   },
   "scripts": {
-    "precommit": "npm test",
+    "prepush": "npm test",
     "lint": "node_modules/.bin/eslint .",
     "test": "NODE_ENV=test jest --runInBand",
     "start": "NODE_ENV=production babel-node index",
