--- a/hours.yml
+++ b/hours.yml
@@ -20,5 +20,5 @@ data:
     - ['12.3.', 2, 'Aivan liian kauan Sequelizen sielunelämän kartoittamiseen ja bugien fixailuun. Testien tekemisen aloittelua.']
     - ['13.3.', 2, 'Varausten päällekkäisyyksien estämistä postgres triggerillä, ja siihen testit.']
     - ['13.3.', 1, 'Frontendin aloittelua.']
-    - ['13.3.', 2, 'Testejä, backendiä ja frontendin komponenttien toteutusta']
-    - ['13.3.', 2, 'BookingTable komponentin rakentelua']
+    - ['13.3.', 2, 'Testejä, backendiä ja frontendin komponenttien toteutusta.']
+    - ['13.3.', 3, 'BookingTable komponentin rakentelua. Kinkkistä.']
