--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "deep-equal": "^1.0.1",
     "moment": "^2.21.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
