--- a/hours.yml
+++ b/hours.yml
@@ -22,3 +22,4 @@ data:
     - ['13.3.', 1, 'Frontendin aloittelua.']
     - ['13.3.', 2, 'Testejä, backendiä ja frontendin komponenttien toteutusta.']
     - ['13.3.', 3, 'BookingTable komponentin rakentelua. Kinkkistä.']
+    - ['14.3.', 1, 'Varauksen tietojen nätyttäminen.']
