--- a/hours.yml
+++ b/hours.yml
@@ -26,3 +26,4 @@ data:
     - ['14.3.', 2, 'BookingTablen solujen hiirellä valinta, ja yleistä fiksailua.']
     - ['15.3.', 1, 'Sass käyttöön.']
     - ['15.3.', 3, 'Kivojen formikomponenttien rakentelua, ja niiden eriyttäminen omaan projektiinsa, jospa vaikka tulee joskus laajennettua kunnolla [kalppi/react-form-helper](https://github.com/kalppi/react-form-helper).']
+    - ['15.3.', 1, 'BookingTablen hiirellä solujen valinnan parantelua.']
