can create a booking

--- a/hours.yml
+++ b/hours.yml
@@ -31,3 +31,4 @@ data:
     - ['16.3.', 3, 'Varauksen tietojen päivitys, Info komponentin nappilogiikkojen eteenpäin viemistä.']
     - ['16.3.', 3, 'Info komponenttien logiikan uudelleenkirjoitusta, tietojen validointia.']
     - ['17.3.', 3, 'Info komponentin formin rakentelua paremmaksi ja päheemmin toimivaksi.']
+    - ['17.3.', 1, 'Uuden varauksen voi luoda.']
