--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,7 @@
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-multi": "^0.1.12",
-    "redux-thunk": "^2.2.0",
-    "tinycolor2": "^1.4.1"
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
