--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
+    "redux-logic": "^0.12.3",
     "redux-multi": "^0.1.12",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "rxjs": "^5.5.7"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
