--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "prepush": "npm test",
     "lint": "node_modules/.bin/eslint .",
-    "test": "NODE_ENV=test jest --runInBand",
+    "test": "NODE_ENV=test jest --runInBand --verbose",
     "start": "NODE_ENV=production babel-node index",
     "watch": "NODE_ENV=dev node_modules/.bin/nodemon --exec babel-node -- ./load-env"
   },
