--- a/hours.yml
+++ b/hours.yml
@@ -46,4 +46,4 @@ data:
     - ['20.3.', 3, 'Haun backendi ja siihen yksinkertainen testi.']
     - ['21.3.', 2, 'Haun parantelua, lisääminen frontendiin.']
     - ['21.3.', 1, 'Älä lataa kaikkia varauksia aina, pelkästään näkymän mukaisesti lasketulta ajalta.']
-    - ['15.5.', 2, 'Bugin metsästystä ja korjausta']
+    - ['15.5.', 3, 'Solujen valinnan säilyminen taulukon uudelleen renderöinnissä bugasi, virheen metsästystä ja korjailua.']
