--- a/hours.yml
+++ b/hours.yml
@@ -47,3 +47,4 @@ data:
     - ['21.3.', 2, 'Haun parantelua, lisääminen frontendiin.']
     - ['21.3.', 1, 'Älä lataa kaikkia varauksia aina, pelkästään näkymän mukaisesti lasketulta ajalta.']
     - ['15.5.', 3, 'Solujen valinnan säilyminen taulukon uudelleen renderöinnissä bugasi, virheen metsästystä ja korjailua.']
+    - ['15.5.', 1, 'Info formin virheellisten fieldien väritys.']
