--- a/hours.yml
+++ b/hours.yml
@@ -48,3 +48,4 @@ data:
     - ['21.3.', 1, 'Älä lataa kaikkia varauksia aina, pelkästään näkymän mukaisesti lasketulta ajalta.']
     - ['15.5.', 3, 'Solujen valinnan säilyminen taulukon uudelleen renderöinnissä bugasi, virheen metsästystä ja korjailua.']
     - ['15.5.', 1, 'Info formin virheellisten fieldien väritys.']
+    - ['16.5.', 2, 'Infon ja react-form-helper apukirjaston päivittelyä ja bugifixailua.']
