--- a/hours.yml
+++ b/hours.yml
@@ -50,4 +50,4 @@ data:
     - ['15.5.', 1, 'Info formin virheellisten fieldien väritys.']
     - ['16.5.', 3, 'Infon ja react-form-helper apukirjaston päivittelyä ja bugifixailua.']
     - ['16.5.', 3, 'Refaktorointia, User modellille service ja api + testejä, viimein käyttämään testeissä lokaalia tietokantaa.']
-    - ['16.5.', 1, 'Overlayn väsäämistä.']
+    - ['16.5.', 2, 'Overlayn väsäämistä, formin bugifixailua.']
