--- a/hours.yml
+++ b/hours.yml
@@ -51,3 +51,4 @@ data:
     - ['16.5.', 3, 'Infon ja react-form-helper apukirjaston päivittelyä ja bugifixailua.']
     - ['16.5.', 3, 'Refaktorointia, User modellille service ja api + testejä, viimein käyttämään testeissä lokaalia tietokantaa.']
     - ['16.5.', 2, 'Overlayn väsäämistä, formin bugifixailua.']
+    - ['17.5.', 2, 'Minimapin renderöinnin bugien metsästystä ja korjailua vieläkin.']
