--- a/hours.yml
+++ b/hours.yml
@@ -55,3 +55,4 @@ data:
     - ['17.5.', 2, 'Varauksen lisävalinnoille (esim. varauksen poistaminen) nappi ja overlay.']
     - ['18.5.', 3, 'Historian tekemisen aloittelua, yleisiä bugifixailuja sekä testien tekemistä']
     - ['18.5.', 1, 'Historia servicen tekoa ja sille testien tekoa, pieniä sql fixailuja.']
+    - ['19.5.', 5, 'Bugifixailua, testejä, varauksen tekemistä paremmin toimimaan, voi valita olemassa olevan asiakkaan']
