rename user -> customer

--- a/hours.yml
+++ b/hours.yml
@@ -49,7 +49,7 @@ data:
     - ['15.5.', 3, 'Solujen valinnan säilyminen taulukon uudelleen renderöinnissä bugasi, virheen metsästystä ja korjailua.']
     - ['15.5.', 1, 'Info formin virheellisten fieldien väritys.']
     - ['16.5.', 3, 'Infon ja react-form-helper apukirjaston päivittelyä ja bugifixailua.']
-    - ['16.5.', 3, 'Refaktorointia, User modellille service ja api + testejä, viimein käyttämään testeissä lokaalia tietokantaa.']
+    - ['16.5.', 3, 'Refaktorointia, Customer modellille service ja api + testejä, viimein käyttämään testeissä lokaalia tietokantaa.']
     - ['16.5.', 2, 'Overlayn väsäämistä, formin bugifixailua.']
     - ['17.5.', 2, 'Minimapin renderöinnin bugien metsästystä ja korjailua vieläkin.']
     - ['17.5.', 2, 'Varauksen lisävalinnoille (esim. varauksen poistaminen) nappi ja overlay.']
