--- a/hours.yml
+++ b/hours.yml
@@ -61,4 +61,5 @@ data:
     - ['21.5.', 2, 'Api vaatii kirjautumisen. Pystyy kirjautua sisään ja ulos.']
     - ['21.5.', 3, 'Haku toimimaan useammalla kuin yhdellä termillä. Sopivan Sql lausekkeen kehitys kesti odotettua pidempään, saattaisi olla helpompi toisenlaisella skeemalla.']
     - ['21.5.', 2, 'Varausten historia näkyviin.']
-    - ['21.5.', 1, 'VIIMEIN käyttämään lokaalia devaus tietokantaa, sekä alussa tarkistus että kaikki ympäristömuuttujat löytyy.']
+    - ['22.5.', 1, 'VIIMEIN käyttämään lokaalia devaus tietokantaa, sekä alussa tarkistus että kaikki ympäristömuuttujat löytyy.']
+    - ['23.5.', 3, 'Loggaus middleware, joka näyttää requestin sekä siihen responsen. Lisäksi validointia.']
