--- a/hours.yml
+++ b/hours.yml
@@ -63,3 +63,5 @@ data:
     - ['22.5.', 2, 'Varausten historia näkyviin.']
     - ['22.5.', 1, 'VIIMEIN käyttämään lokaalia devaus tietokantaa, sekä alussa tarkistus että kaikki ympäristömuuttujat löytyy.']
     - ['23.5.', 3, 'Loggaus middleware, joka näyttää requestin sekä siihen responsen. Lisäksi validointia.']
+    - ['23.5.', 2, 'Loggerin päivittelyä, managementin kehittelyä.']
+    - ['23.5.', 2, 'Itemeiden järjestystä voi muuttaa, siihen automaattiset triggerit ja sql funktiot + testejä.']
