--- a/hours.yml
+++ b/hours.yml
@@ -65,3 +65,4 @@ data:
     - ['23.5.', 3, 'Loggaus middleware, joka näyttää requestin sekä siihen responsen. Lisäksi validointia.']
     - ['23.5.', 2, 'Loggerin päivittelyä, managementin kehittelyä.']
     - ['23.5.', 2, 'Itemeiden järjestystä voi muuttaa, siihen automaattiset triggerit ja sql funktiot + testejä.']
+    - ['24.5.', 1, 'Itemeiden järjestystä pystyy muuttaa ui:sta.']
