--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.2.1",
+    "logger": "github:kalppi/logger",
     "nodemon": "^1.17.1",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
