making ready for heroku

--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,7 @@
     "prepush": "npm test",
     "lint": "node_modules/.bin/eslint .",
     "test": "NODE_ENV=test jest --runInBand --verbose",
-    "start": "NODE_ENV=production babel-node index",
+    "start": "NODE_ENV=production babel-node ./index",
     "watch": "NODE_ENV=dev node_modules/.bin/nodemon --exec babel-node -- ./load-env"
   },
   "author": "Jarno Luukkonen",
