--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "eslint": "^4.18.2",
     "husky": "^0.14.3",
     "jest": "^22.4.2",
+    "shape.js": "github:kalppi/Shape.js",
     "supertest": "^3.0.0"
   },
   "scripts": {
